Bug 325620 - Deselecting the "use flash" option isn't persistent
Summary: Deselecting the "use flash" option isn't persistent
Status: RESOLVED FIXED
Alias: None
Product: kamoso
Classification: Applications
Component: general (show other bugs)
Version: 2.0.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Alex Fiestas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-04 12:08 UTC by Mark Fraser
Modified: 2015-06-03 13:30 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Fraser 2013-10-04 12:08:52 UTC
In the configuration of Kamoso there is the option to have the screen flash or not when taking a photo. This defaults to on and is can be turned off, but having turned this option off when reloading Kamoso it is back to on again.

Reproducible: Always

Steps to Reproduce:
1.Run Kamoso
2.Turn 'Use Flash' off
3.Quit Kamoso
4.Run Kamoso
5.See that 'Use Flash' option is back on


Expected Results:  
This option should be saved between sessions.
Comment 1 Aleix Pol 2015-06-03 13:30:07 UTC
Git commit 4031d5e09ee280c3e19b4883f45cff41779d5f3e by Aleix Pol.
Committed on 03/06/2015 at 13:28.
Pushed by apol into branch 'master'.

Restore flash configuration

Make sure settings are saved before closing

M  +1    -8    src/kamosoSettings.kcfg
M  +2    -1    src/qml/ActionsModel.qml
M  +7    -4    src/qml/Config.qml
M  +2    -1    src/qml/Main.qml
M  +1    -0    src/video/webcamcontrol.cpp

http://commits.kde.org/kamoso/4031d5e09ee280c3e19b4883f45cff41779d5f3e