Restore flash configuration

Make sure settings are saved before closing

BUG: 325620