src/qml/Config.qml
@@ -41,15 +41,18 @@ ColumnLayout
         }
     }
 
-    Item {
-//         white space
-        height: 15
-    }
+    Item { height: 15 }
 
     Label {
         font.bold: true
         text: i18n("Camera Settings")
     }
+    CheckBox {
+        text: i18n("Use flash")
+        checked: config.useFlash
+        onCheckedChanged: config.useFlash = checked
+    }
+    Item { height: 5 }
     Label { text: i18n("Brightness:") }
     Slider {
         id: brightnessSlider
